# Web-Scraping

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  scraping.py
.github/workflows/: ci.yml
configs/: settings.yaml
diagrams/: architecture.md
docs/: technical_spec.md
src/: scraping.py
tests/: test_scraping.py
